# training_cicd

./: Dockerfile  Jenkinsfile  Jenkinsfile.startVersion  README.md  WORKSHOP-GITHUB.md  WORKSHOP-GITLAB.md  WORKSHOP-JENKINS.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: pylint.yml
